--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="images/zwinkern.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="images/index.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
     <p>At Mozilla, we’re a global community of</p>
     
