--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
-    <img src="images/index.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
-
-    <h1>Reingeguckt</h1>
-    <img src=images/laughing.gif>
+    <h1>JR Fitness</h1>
+    <h1>Trainingspläne, Shakes und Mehr</h1>
+    <div>
+      <li class="nav-item active">
+        <a href="trainingspläne.html" class="nav-link">
+           <i class="fa fa-tasks" aria-hidden="true"></i>                            
+               <span class="ml-1">Trainingspläne</span>
+       </a>
+    </li>
+    </div>
     <script src="scripts/main.js"></script>
      </body>
 </html>
