--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
     <h1>JR Fitness</h1>
     <h1>Trainingspläne, Shakes und Mehr</h1>
     <div>
-      <li class="nav-item active">
+    <li class="nav-item active">
         <a href="trainingspläne.html" class="nav-link">
            <i class="fa fa-tasks" aria-hidden="true"></i>                            
                <span class="ml-1">Trainingspläne</span>
        </a>
     </li>
+    <li class="nav-item active">
+        <a href="shakes.html" class="nav-link">
+           <i class="fa fa-tasks" aria-hidden="true"></i>                            
+               <span class="ml-1">Shakes</span>
+       </a>
+    </li>
+    <li class="nav-item active">
+        <a href="dontclickme.html" class="nav-link">
+           <i class="fa fa-tasks" aria-hidden="true"></i>                            
+               <span class="ml-1">Nicht drauf klicken!</span>
+       </a>
+    </li>
+    
     </div>
     <script src="scripts/main.js"></script>
      </body>
