--- a/dontclickme.html
+++ b/dontclickme.html
@@ -18,6 +18,13 @@
         <br>
         <br>
         <img src="images/laughing.gif">
+
+        <div>
+            <input id="Zahl1">
+        </input>
+            <input id="Zahl2">
+        </input>
+        </div>
     </div>
 </body>
 </html>
