--- a/trainingspläne.html
+++ b/trainingspläne.html
@@ -10,6 +10,13 @@
   
 </head>
 <body>
+
+  <div class="navbar-left">
+    <a href="#">
+      <i class="fa fa-angle left" aria-hidden="true">Zurück</i>
+    </a>
+  </div>
+
     <div class="form-group row">
         <label class="col col-2 form-control-label"><h1>Trainingspläne</h1></label>
         <div class="col col-10">
