--- a/shakes.html
+++ b/shakes.html
@@ -9,13 +9,18 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   
 </head>
-<body>
-    <h1>Rezepte zu Weightgainer-Shakes</h1>
-    <br>
-    <h2 style="text-align: center;">#1 Der Schokotraum</h2>
+<body>   
+    <div><h1 style="float:center;">Rezepte zu Weightgainer-Shakes</h1>
+        <form style="float:top-left;">
+                <input type="button" value="Go back!" onclick="history.back()">
+                </input>
+        </form>
+        </div>
+        <br>
+    <h2 style="text-align: left;">#1 Der Schokotraum</h2>
     <p></p>
-    <p style="text-align: center;"></p>
-    <h2>Der Klassiker unter den Aufbaushakes</h2>
+    <p style="text-align: left;"></p>
+    <h3>Der Klassiker unter den Aufbaushakes</h3>
     <p style="text-align: justify; padding-left: 30px">
             - 400ml Vollmilch
     </p>
@@ -38,10 +43,10 @@
             Nährwerte: ca. 1090kcal, 122g Kohlenhydrate, 38g Fett, 61g Eiweiß
     </p>
     <br>
-    <h2 style="text-align: center;">#2 Die Kalorienbombe</h2>
+    <h2 style="text-align: left;">#2 Die Kalorienbombe</h2>
     <p></p>
-    <p style="text-align: center;"></p>
-    <h2>Optimal für Massephase</h2>
+    <p style="text-align: left;"></p>
+    <h3>Optimal für Massephase</h3>
     <p style="text-align: justify; padding-left: 30px">
             - 500ml Vollmilch
     </p>
@@ -70,10 +75,10 @@
             Nährwerte: ca. 1666kcal, 138g Kohlenhydrate, 80g Fett, 99g Eiweiß
     </p>
     <br>
-    <h2 style="text-align: center;">#3 Der Veganer</h2>
+    <h2 style="text-align: left;">#3 Der Veganer</h2>
     <p></p>
-    <p style="text-align: center;"></p>
-    <h2>Alternative für Veganer</h2>
+    <p style="text-align: left;"></p>
+    <h3>Alternative für Veganer</h3>
     <p style="text-align: justify; padding-left: 30px">
             - 400ml Mandelmilch
     </p>
