--- a/loginpage.html
+++ b/loginpage.html
@@ -14,7 +14,7 @@
   <a href="trainingspläne.html" class="w3-bar-item w3-button">Mein Trainingsplan</a>
   <a href="shakes.html" class="w3-bar-item w3-button">Fitness-Shakes</a>
   <a href="dontclickme.html" class="w3-bar-item w3-button">Bait</a>
-  <a href="myaccout.html" class="w3-bar-item w3-button">Mein Konto</a>
+  <a href="add.html" class="w3-bar-item w3-button">Mein Konto</a>
   <a href="index.html" class="w3-bar-item w3-button">Logout</a>
 </div>
 
@@ -63,13 +63,13 @@
         </script>
         
   <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <h1 style="margin-left:25%;margin-right:25%;text-align: center; width:100%;">JR Fitness</h1>
+  <h1>JR Fitness</h1>
 
 
 <script>
         function w3_open() {
           //document.getElementById("main").style.marginLeft = "25%";
-          document.getElementById("mySidebar").style.width = "25%";
+          //document.getElementById("mySidebar").style.width = "25%";
           document.getElementById("mySidebar").style.display = "block";
           document.getElementById("openNav").style.display = 'none';
         }
